--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "update-spritesheets": "cd ./resources && ./pack && cd .. && cp ./resources/spritesheets/* ./app/assets/spritesheets/"
   },
   "dependencies": {
+    "gsap": "^1.20.2",
     "pixi.js": "^4.5.3"
   },
   "devDependencies": {
